--- a/_layouts/ponyplayer.html
+++ b/_layouts/ponyplayer.html
@@ -38,7 +38,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="https://static.wikia.nocookie.net/mlp/images/4/4a/Site-favicon.ico/revision/latest?cb=20210531205122">
     <link rel="stylesheet" type="text/css" href="/src/css/viewEp.css">
 		<script src="/src/js/viewEp.js"></script>
-    <!-- <meta name="referrer" content="no-referrer"> -->
+    <meta name="referrer" content="no-referrer">
     <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
     <META HTTP-EQUIV="EXPIRES" CONTENT="0">
     <META HTTP-EQUIV="CACHE-CONTROSL" CONTENT="NO-CACHE">
