--- a/_includes/credit.html
+++ b/_includes/credit.html
@@ -1,2 +1,4 @@
+<p>
 Credit:<a href="https://fim.heartshine.xyz/">Ember's MLP Archive</a>
-This site is a modded version of Ember's site
+This site is based on Ember's site
+</p>
