--- a/_layouts/ponyplayer.html
+++ b/_layouts/ponyplayer.html
@@ -78,7 +78,7 @@
     </header>
 
     <!-- Display the countdown timer in an element -->
-  <script src="/src/js/btn.js"></script>
+  <!-- <script src="/src/js/btn.js"></script> -->
   <!-- <div id="divc">
     <h1>口嗨累計時間<p id="timer"></p>
     </h1>
