--- a/_includes/credit.html
+++ b/_includes/credit.html
@@ -1,4 +1,4 @@
-<p>
+<p id="credit">
 Credit:<a href="https://fim.heartshine.xyz/">Ember's MLP Archive</a>
 This site is based on Ember's site
 </p>
