--- a/_layouts/ponyplayer.html
+++ b/_layouts/ponyplayer.html
@@ -84,7 +84,7 @@
     </h1>
   </div> -->
 
-  <script src="/src/js/timer.js"></script>
+  <!-- <script src="/src/js/timer.js"></script> -->
     <main id="content" class="main-content" role="main">
       {{ content }}
 
