--- a/_includes/disclaimer.html
+++ b/_includes/disclaimer.html
@@ -1,3 +1,3 @@
-<p>
+<p id="disclaimer">
     本網站所有頁面均為個人學習網頁架設為目的，嚴禁任何商業行為。所有影片及圖片版權皆由版權方擁有，任何在本網站之外的任何行為(如:分享、轉載等)，本網站擁有者恕不負任何責任。本網站所有影片及圖片來源均由其他公開網路版面所取得，請有餘力的各位支持正版高畫質影片。
 </p>
