--- a/src/css/viewEp.css
+++ b/src/css/viewEp.css
@@ -20,28 +20,12 @@
 }
 
 @font-face {
-	font-family: 'Equestria';
-	src: url('https://raw.githubusercontent.com/linbei9487/linbei9487.github.io/main/src/font/Equestria.otf') format('opentype');
-	font-display: block;
+	font-family: CelestiaRedux;
+	src: url('http://www.mattyhex.net/CMR/media/fonts/CelestiaMediumRedux1.55.ttf');
 }
 
-@font-face {
-	font-family: 'Equestria-Bold';
-	src: url('https://raw.githubusercontent.com/linbei9487/linbei9487.github.io/main/src/font/Equestria-Bold.otf') format('opentype');
-	font-display: block;
-}
-
-@font-face {
-	font-family: 'Equestria-Bold-Italic';
-	src: url('https://raw.githubusercontent.com/linbei9487/linbei9487.github.io/main/src/font/Equestria-Bold-Italic.otf') format('opentype');
-
-	font-display: block;
-}
-
-@font-face {
-	font-family: 'Equestria-Italic';
-	src: url('https://raw.githubusercontent.com/linbei9487/linbei9487.github.io/main/src/font/Equestria-Italic.otf') format('opentype');
-	font-display: block;
+.main-content {
+	max-width: none;
 }
 
 html {
@@ -57,7 +41,7 @@ body {
 	min-height: 100vh;
 	padding: 0px;
 	transition-duration: 0.25s;
-	font-family: Equestria;
+	font-family: CelestiaRedux;
 	letter-spacing: 3px;
 }
 
@@ -75,17 +59,19 @@ body.lightsOut {
 p {
 	color: #fff;
 	display: inline;
-	font: 24px Equestria, sans-serif;
+	font: 24px CelestiaRedux, sans-serif;
 	margin: 0px;
 	text-shadow: 1px 1px 2px #000;
 }
 
 #disclaimer {
 	font-size: 16px;
+	text-align: center;
 }
 
 p#credit {
 	display: block;
+	text-align: center;
 }
 
 p#smol {
@@ -103,7 +89,7 @@ a {
 
 h1 {
 	color: #FFF;
-	font: 58px Equestria-Bold, sans-serif;
+	font: 58px CelestiaRedux, sans-serif;
 	margin: 0px;
 	padding-top: 10px;
 	text-align: center;
@@ -132,7 +118,7 @@ select {
 	box-shadow: 0px 4px 8px #222;
 	color: #FFF;
 	display: inline;
-	font: 22px Equestria-Bold, sans-serif;
+	font: 22px CelestiaRedux, sans-serif;
 	margin: 2px 0px 2px 0px;
 	padding: 2px;
 	text-align: center;
@@ -188,7 +174,7 @@ video::cue {
 		1px 1px 2px #000;
 	background: transparent;
 	opacity: 0.5;
-	font: 1.4em Equestria, sans-serif bold;
+	font: 1.4em CelestiaRedux, sans-serif bold;
 }
 
 @media only screen and (min-width: 720px) {
