--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -22,7 +22,7 @@
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       <a href="https://bradly0cjw.github.io/main/zh" class="btn">個人主頁</a>
-      <a href="https://linbei9487.github.io/pony" class="btn">PONIES</a>
+      <a href="https://poncjw-beta.vercel.app/" class="btn">PONIES</a>
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
